tests/miniJava/neg/000854_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = int new int [ 0 ] ; } }
